# getred

./: AGENTS.md  CLAUDE.md  README.md  pyproject.toml
.claude/agents/: pytest-runner.md
.github/workflows/: publish.yml  test-pr.yml  version-check.yml
.opencode/commands/: ghissue.md
src/getred/: __init__.py  __main__.py  cli.py  fetcher.py  models.py  parser.py  utils.py
tests/: __init__.py  conftest.py  test_fetcher.py  test_models.py  test_parser.py  test_utils.py  test_version.py
