[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "getred"
version = "0.1.0"
description = "A CLI tool to fetch Reddit threads and save them as structured JSON"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "getred contributors"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "click>=8.0.0",
    "httpx>=0.24.0",
]

[project.scripts]
getred = "getred.cli:main"

[project.urls]
Homepage = "https://github.com/yourusername/getred"
Issues = "https://github.com/yourusername/getred/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/getred"]
