[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "getred"
version = "0.1.1"
description = "A CLI tool to fetch Reddit threads and save them as structured JSON"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    { name="Mate Gelei-Szego", email="hello@mategelei.com" }
]
classifiers = [
    Development Status :: 5 - Production/Stable
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "click>=8.0.0",
    "httpx>=0.24.0",
]

[project.scripts]
getred = "getred.cli:main"

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
]

[project.urls]
Homepage = "https://github.com/mgelei/getred"
Issues = "https://github.com/mgelei/getred/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/getred"]

[tool.pytest.ini_options]
testpaths = ["tests"]
